# open_ocean

./: Cargo.toml  README.md
assets/models/pirate_ship/: README.md  dutch_ship_large_01_1k.gltf
src/: main.rs
src/components/: collider_group.rs  health.rs  id.rs  mod.rs  player.rs  ship.rs
src/components/ship/: camera.rs  cannons.rs  enemy.rs  mod.rs  player.rs  player_ship.rs  sails.rs
src/ui/: button.rs  mod.rs  pause.rs
