[package]
name = "open-ocean"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.11.0"

# Bevy requirements
[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Bevy improvements
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3